samples/_failures_safe/1761252662_ed5d59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_255cc55e.c: In function ‘main’:
./samples/SAFE/__tmp_255cc55e.c:163:9: error: expected declaration or statement at end of input
  163 |         fprintf(stderr, "Invalid compression type\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_255cc55e.c:163:9: error: expected declaration or statement at end of input
